--- a/package.json
+++ b/package.json
@@ -32,5 +32,13 @@
     "less-loader": "^5.0.0",
     "prettier": "^2.2.1",
     "typescript": "~4.1.5"
+  },
+  "gitHooks": {
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,ts,vue}": [
+      "vue-cli-service lint",
+      "git add"
+    ]
   }
-}
