--- a/package.json
+++ b/package.json
@@ -38,16 +38,11 @@
     "prettier": "^2.2.1",
     "typescript": "~4.1.5"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
     "src/**/*.{js,vue}": [
       "prettier --write",
       "eslint --cache --fix",
-      "git add"
+      "git add ."
     ]
   }
 }
